# EDA-2-grafo-brainrot

./: CMakeLists.txt  README.md  brainrot_analyzer_spec.md  main.cpp  run_project.md  run_scenario.sh
data/: brainrotVocab.txt  graph.html  graph.json  nlp_report.txt  stopWords.txt  visualize.py
data/corpus/: WArNING.txt  doc1.txt  doc2.txt
data/scenarios/: bfs.txt  dijkstra.txt  full_corpus.txt  relevance.txt
include/algorithms/: BFS.hpp  BFSResult.hpp  Dijkstra.hpp
include/analysis/: ReportGenerator.hpp
include/graph/: Edge.hpp  Graph.hpp  GraphBuilder.hpp  PathResult.hpp
include/nlp/: SpacyProcessor.hpp  Token.hpp
include/parser/: CorpusManager.hpp  FileLoader.hpp
include/structures/: HeapNode.hpp  MaxHeap.hpp  Queue.hpp
include/utils/: Config.hpp  Logger.hpp
src/algorithms/: BFS.cpp  Dijkstra.cpp
src/analysis/: ReportGenerator.cpp
src/graph/: Graph.cpp  GraphBuilder.cpp
src/nlp/: SpacyProcessor.cpp
src/parser/: CorpusManager.cpp  FileLoader.cpp
src/structures/: MaxHeap.cpp  Queue.cpp
src/utils/: Config.cpp  Logger.cpp
tests/algorithms/: BFSTest.cpp  DijkstraTest.cpp
tests/analysis/: ReportGeneratorTest.cpp
tests/graph/: GraphBuilderTest.cpp  GraphTest.cpp
tests/nlp/: SpacyProcessorTest.cpp
tests/parser/: CorpusManagerTest.cpp  FileLoaderTest.cpp
tests/structures/: MaxHeapTest.cpp  QueueTest.cpp
